# src/routes/room.js
@@ -3,20 +3,21 @@
 const router = require('express').Router()
 const { isAdmin,isLogin } = require('../middlewares/permissions')
 /* ------------------------------------------------------- */
-// routes/room:
+
 
 const room = require('../controllers/room')
+const upload = require('../middlewares/upload')
 
-// URL: /rooms
+
 
 router.route('/')
     .get(room.list)
-    .post(isAdmin,room.create)
+    .post(isAdmin,upload.array('images'),room.create)
 
 router.route('/:id')
     .get(room.read)
-    .put(isAdmin,room.update)
-    .patch(isAdmin,room.update)
+    .put(isAdmin,upload.array('images'),room.update)
+    .patch(isAdmin,upload.array('images'),room.update)
     .delete(isAdmin,room.delete)
 
 /* ------------------------------------------------------- */
